libs/infra-chart/template/ceramic.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ceramic-node
  labels:
    environment: production
    app: headline
    tier: service
spec:
  replicas: 1
  serviceName: ceramic-api-node
  selector:
    matchLabels:
      name: ceramic-node
  template:
    metadata:
      labels:
        name: ceramic-node
    spec:
      containers:
        - name: ceramic
          image: ceramicnetwork/js-ceramic@sha256:5f58470e2e37e4f31777888b653a061f540f71956c322e91c087a4e7172a42c8
          ports:
            - containerPort: 7007
          volumeMounts: - mountPath: '/root/.ceramic/statestore'
              name: ceramic-pvc
            - name: daemon-config
              mountPath: /root/.ceramic
            - mountPath: '/root/.ceramic/logs'
              name: ceramic-logs-pvc
          resources:
            requests:
              memory: 1024Mi
              cpu: 2048m
            limits:
              memory: 2048Mi
              cpu: 4096m
      volumes:
        - name: daemon-config
          configMap:
            name: ceramic-node-configmap
  volumeClaimTemplates:
    - metadata:
        name: ceramic-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
    - metadata:
        name: ceramic-logs-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
