libs/infra-chart/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - ceramic.viaheadline.xyz
      secretName: ceramic-node-two-tls
  rules:
    - host: ceramic.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-node
                port:
                  number: 7007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-ipfs
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: 'letsencrypt-staging'
spec:
  tls:
    - hosts:
        - ceramic-ipfs.viaheadline.xyz
      secretName: ceramic-ipfs-node-tls
  rules:
    - host: ceramic-ipfs.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-ipfs
                port:
                  number: 4012
  #apiVersion: cert-manager.io/v1
  #kind: Issuer
  #metadata:
  #  name: letsencrypt-prod
  #spec:
  #  acme:
  #    # The ACME server URL
  #    server: https://acme-v02.api.letsencrypt.org/directory
  #    # Email address used for ACME registration
  #    # Name of a secret used to store the ACME account private key
  #    privateKeySecretRef:
  #      name: letsencrypt-prod
  #    # Enable the HTTP-01 challenge provider
  #    solvers:
  #      - http01:
  #          ingress:
  #            class: nginx
